--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="display-table-cell vertical-bottom">
                 <div class="nav-logo-container">
                   <a id="dnn_HeaderSection_dnnLOGO_hypLogo" title="FlexIT: Managing Technology, Powering Business" href="index.html">
-                    <img id="dnn_HeaderSection_dnnLOGO_imgLogo" src="Resources/CompanyLogo.png" alt="Just Flex IT" /></a>
+                    <img id="dnn_HeaderSection_dnnLOGO_imgLogo" src="Resources/CompanyLogo.png" alt="Just Flex IT" height="200px" width="200px"/></a>
                 </div>
               </div>
               <div class="display-table-cell vertical-bottom">
